--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^10.0.0",
+		"@nestjs/config": "^3.3.0",
 		"@nestjs/core": "^10.0.0",
 		"@nestjs/platform-express": "^10.0.0",
 		"@prisma/client": "6.0.1",
@@ -29,6 +30,7 @@
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^10.0.0",
+		"@nestjs/mapped-types": "^2.0.6",
 		"@nestjs/schematics": "^10.0.0",
 		"@nestjs/testing": "^10.0.0",
 		"@types/cookie-parser": "^1.4.8",
